made it so that when counter is two digits, the timestamp shifts accordingly to be directly under subject.  now seeing some weird timestamp issues, have to work out bugs there.

--- a/PrayList/static/new.css
+++ b/PrayList/static/new.css
@@ -33,8 +33,10 @@
 	display: inline;
 	padding-left: 150px;
 	font-size: 14;
-	position: absolute;
 
+}
+#timestampshift1 {
+	padding-left: 160px;
 }
 
 #number {
